[gd_scene load_steps=5 format=3 uid="uid://bu63kkvwoe8uj"]

[ext_resource type="Script" path="res://scripts/music.gd" id="1_8njku"]
[ext_resource type="Theme" uid="uid://c87g1wfiyj8qq" path="res://tres/order_bubble.tres" id="1_u5os8"]
[ext_resource type="PackedScene" uid="uid://b7ic3ox7ery5" path="res://scenes/pause_menu.tscn" id="2_bs5sd"]
[ext_resource type="Texture2D" uid="uid://baujyio84afba" path="res://assets/bg.png" id="2_hllrr"]

[node name="music" type="Node2D"]
script = ExtResource("1_8njku")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(394, 431)
texture = ExtResource("2_hllrr")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_u5os8")
theme_override_font_sizes/font_size = 36
text = "Music and Sounds by Valin Gabriel"

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_u5os8")
theme_override_font_sizes/font_size = 36
text = "Press Escape to Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 5.0
offset_top = 195.0
offset_right = 1150.0
offset_bottom = 323.0

[node name="current" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u5os8")
theme_override_font_sizes/font_size = 40
text = "Current Track"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 209

[node name="back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u5os8")
theme_override_font_sizes/font_size = 40
text = "Previous Track"

[node name="play" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u5os8")
theme_override_font_sizes/font_size = 40
text = "Play Track"

[node name="next" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u5os8")
theme_override_font_sizes/font_size = 40
text = "Next Track"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="pauseMenu" parent="." instance=ExtResource("2_bs5sd")]
position = Vector2(581, 324)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/next" to="." method="_on_next_pressed"]
